Обновлён ответ от API
