# src/main/java/ru/smc/smc/api/application/common/model/response/PlatformReceiver.java
@@ -3,6 +3,7 @@ package ru.smc.smc.api.application.common.model.response;
 import lombok.Data;
 import lombok.experimental.Accessors;
 import ru.smc.smc.api.application.common.enums.AvailablePlatform;
+import ru.smc.smc.api.application.common.enums.UserRole;
 
 import java.util.List;
 
@@ -10,6 +11,7 @@ import java.util.List;
 @Accessors(chain = true)
 public class PlatformReceiver {
     private AvailablePlatform platform;
-    private String receiverId;
+    private UserRole role;
+    private List<String> receiversId;
     private List<List<ElementModel>> replyElements;
 }
