# src/main/java/ru/smc/smc/api/application/common/model/response/UserResponseItem.java
@@ -6,6 +6,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import ru.smc.smc.api.application.common.enums.AvailablePlatform;
 import ru.smc.smc.api.application.common.enums.ResponseStatus;
+import ru.smc.smc.api.application.common.enums.UserRole;
 
 @Data
 @Builder
@@ -15,5 +16,6 @@ public class UserResponseItem {
     private ResponseStatus status;
     private AvailablePlatform platform;
     private String userIdOnPlatform;
+    private UserRole role;
     private MessageResponse responseToUser;
 }
